--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <aside>
             <div class="text">
                 <h1><a href="index.html">Port-Folio</a></h1>
-                <h4>UX-UI Desigen</h4>
+                <h4>UX-UI Design</h4>
                 <h4>2019</h4>
             </div> 
             <nav>
@@ -45,6 +45,7 @@
         </section>
            
     </div>
+    <!-- 푸터 -->
     <footer>
         <div class="copy">
             <p>copyright Allright reserved by jung</p> 
