--- a/gallery.html
+++ b/gallery.html
@@ -59,6 +59,7 @@
                             <a data-fancybox="gallery" href="images/largeimg/typho-shadow.png"><img src="images/sumnail/typho-shadow.png"></a> 
                             <a data-fancybox="gallery" href="images/largeimg/title-img.png"><img src="images/sumnail/title-img-sum.png"></a>
                             <a data-fancybox="gallery" href="images/largeimg/cat.jpg"><img src="images/sumnail/cat-sum.png"></a>
+                            <a data-fancybox="gallery" href="images/largeimg/businesscard.png"><img src="images/sumnail/businesscard-sum.png"></a>
                         </div>
                         <div class="m-list">
                             <a data-fancybox="gallery" href="images/largeimg/banner.png"><img src="images/sumnail/banner-sum.png"></a>
